crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__while__closure_in_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/closure_in_body.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var f1 @1 ∅)
   (var f2 @2 ∅)
   (var f3 @3 ∅)
   (var i @4 1.0)
   (while
      (< (local i @4) 4.0)
      (block
         (var j @5 (local i @4))
         (fun f @6 []
            (block
               (print (global j @5))))
         (if
            (== (local j @5) 1.0)
            (expr (= f1 (local 1) (local f @6)))
            (if
               (== (local j @5) 2.0)
               (expr (= f2 (local 2) (local f @6)))
               (expr (= f3 (local 3) (local f @6)))))
         (expr (= i (local 4) (+ (local i @4) 1.0)))))
   (expr (call +5 (local f1 @1)))
   (expr (call +5 (local f2 @2)))
   (expr (call +5 (local f3 @3))))

----- stderr -----
