crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__while__return_inside.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/return_inside.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f @1 []
      (block
         (while
            true
            (block
               (var i @0 "i")
               (return (local i @0))))))
   (print (call +2 (local f @1))))

----- stderr -----
