crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__while__syntax.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/syntax.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var c @1 0.0)
   (while
      (< (local c @1) 3.0)
      (print (= (local c @1) (+ (local c @1) 1.0))))
   (var a @2 0.0)
   (while
      (< (local a @2) 3.0)
      (block
         (print (local a @2))
         (expr (= (local a @2) (+ (local a @2) 1.0)))))
   (while
      false
      (if
         true
         (expr 1.0)
         (expr 2.0)))
   (while
      false
      (while
         true
         (expr 1.0)))
   (while
      false
      (for
         ∅
         ∅
         ∅
         (expr 1.0))))

----- stderr -----
